--- a/GDRB- Ecommerce/BannerCollectionViewCell/BannnerCollectionViewCell.xib
+++ b/GDRB- Ecommerce/BannerCollectionViewCell/BannnerCollectionViewCell.xib
@@ -20,7 +20,7 @@
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="adB-UW-1l6">
                         <rect key="frame" x="2" y="5" width="374" height="165"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="wtF-M1-0eO">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="foodtrack7" translatesAutoresizingMaskIntoConstraints="NO" id="wtF-M1-0eO">
                                 <rect key="frame" x="2" y="2" width="370" height="161"/>
                             </imageView>
                         </subviews>
@@ -49,4 +49,7 @@
             <point key="canvasLocation" x="109.9236641221374" y="45.774647887323944"/>
         </collectionViewCell>
     </objects>
+    <resources>
+        <image name="foodtrack7" width="612" height="431"/>
+    </resources>
 </document>
